[gd_scene load_steps=3 format=3 uid="uid://ces68lfcc15jb"]

[ext_resource type="PackedScene" uid="uid://djyl0xhyqsmik" path="res://menustage.tscn" id="1_3ilyb"]
[ext_resource type="Script" uid="uid://p5xjqhiv6duy" path="res://leaderboard_gui.gd" id="2_oli24"]

[node name="Leaderboard" type="CanvasLayer"]

[node name="Node3D" type="Node3D" parent="."]

[node name="MenuStage" parent="Node3D" instance=ExtResource("1_3ilyb")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Node3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="Node3D/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Node3D/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.512777, 0, -0.858522, 0, 1, 0, 0.858522, 0, -0.512777, -0.30356, 2.68104, -1.90109)

[node name="Leaderboard GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource("2_oli24")

[node name="MarginContainer" type="MarginContainer" parent="Leaderboard GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard GUI/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Leaderboard GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LineEdit" type="LineEdit" parent="Leaderboard GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Enter Name Here"
max_length = 3
expand_to_text_length = true

[node name="Score" type="Button" parent="Leaderboard GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score"

[node name="Submit" type="Button" parent="Leaderboard GUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit
"

[node name="Leaderboard" type="Button" parent="Leaderboard GUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Leaderboard"

[connection signal="text_changed" from="Leaderboard GUI/MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="Leaderboard GUI" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Leaderboard GUI/MarginContainer/VBoxContainer/HBoxContainer/Score" to="Leaderboard GUI" method="_on_score_pressed"]
[connection signal="pressed" from="Leaderboard GUI/MarginContainer/VBoxContainer/HBoxContainer/Submit" to="Leaderboard GUI" method="_on_submit_pressed"]
[connection signal="pressed" from="Leaderboard GUI/MarginContainer/VBoxContainer/Leaderboard" to="Leaderboard GUI" method="_on_leaderboard_pressed"]
